Improve export configuration, workflow reporting, and ZIP creation
- Move Gmail labels and file directories to application properties
- Add configurable default export format
- Add configurable ZIP filename prefix
- Track export results with WorkflowReport
- Add ZIP creation status and workflow duration to reporting
- Improve processed file and ZIP path handling
- Remove hard-coded configuration values